hphp/hack/test/typecheck/constraints/classmeth_constraints_bad.php.like_types.exp
File "classmeth_constraints_bad.php", line 11, characters 6-6:
Invalid argument (Typing[4110])
File "classmeth_constraints_bad.php", line 6, characters 45-46:
Expected ~Base because it is an unenforceable type
File "classmeth_constraints_bad.php", line 11, characters 6-6:
But got int
